# character-sheet

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/agents/: project-manager.md  rust-code-reviewer.md  rust-code-writer.md  system-architect.md
client/: Cargo.toml  README.md  Trunk.toml  index.html
client/src/: character_select.rs  components.rs  create_character.rs  create_item.rs  main.rs  network.rs  networking.rs  portrait.rs  state.rs  ui.rs  version_select.rs
client/src/events/: create_item.rs  experience.rs  inventory.rs  learn_ability.rs  learn_trait.rs  level_up.rs  mod.rs  resource.rs  upgrade.rs  wallet.rs
client/src/ui/: apply.rs  helpers.rs  icons.rs  layout.rs  mod.rs  overlays.rs  params.rs
data/: abilities.json  characters.json  equipment.json  items.json  skills.json  traits.json  weapons.json
data/characters/: eldrin_shadowmere_a1b2c3d4.json  grimjaw_the_unyielding_c3d4e5f6.json  lyssa_ashborne_f6a7b8c9.json  seraphina_duskwalker_d4e5f6a7.json  talion_ff7dd12b.json  test_3ea147ec.json  thalia_nightwhisper_b2c3d4e5.json  vorath_ironveil_e5f6a7b8.json
scripts/: build-prod.sh  dev-client.sh  dev-server.sh  setup-vps.sh
server/: Cargo.toml
server/src/: main.rs  storage.rs  websocket.rs
shared/: Cargo.toml
shared/src/: character.rs  lib.rs  messages.rs  version.rs
shared/src/character/: ability.rs  character_trait.rs  characteristic.rs  class.rs  effect.rs  equipment.rs  inventory.rs  item.rs  mod.rs  race.rs  resource.rs  skill.rs  wallet.rs  weapon.rs
ui_widgets/: CLAUDE.md  Cargo.toml
ui_widgets/src/: colors.rs  lib.rs  styles.rs
ui_widgets/src/atoms/: icon.rs  mod.rs  shape_box.rs  text.rs
ui_widgets/src/composites/: abilities.rs  character_traits.rs  characteristics.rs  equipped_gear.rs  identity_bar.rs  inventory.rs  mod.rs  points.rs  portrait.rs  skills.rs  stats.rs  status_bar.rs  traits_.rs  wallet.rs  weapon.rs
ui_widgets/src/molecules/: ability_card.rs  equipment_card.rs  inventory_cell.rs  inventory_table.rs  item_card.rs  labeled_value.rs  mod.rs  progress_bar.rs  small_ability.rs  titled_box.rs  weapon_card.rs  weapon_entry.rs
ui_widgets/src/traits/: alignable.rs  mod.rs  roundable.rs  sizeable.rs  with_text.rs
