[workspace]
members = ["client", "server", "shared", "ui_widgets"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Shared
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Client
bevy = { version = "0.18.0", default-features = false }
bevy_egui = "0.39"
ewebsock = "0.6"

# Server
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
futures-util = "0.3"

# Internal
shared = { path = "shared" }
ui_widgets = { path = "ui_widgets" }

# Release profile optimized for WASM size
[profile.release]
lto = true
opt-level = "z"

[profile.release.package."*"]
opt-level = "z"
