[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
shared.workspace = true
ui_widgets.workspace = true
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "bevy_sprite",
    "bevy_log",
    "default_font",
    "webgl2",
    "x11",
] }
bevy_egui.workspace = true
ewebsock.workspace = true
uuid.workspace = true

# Required for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console", "Window", "Location"] }
wasm-bindgen-futures = "0.4"
getrandom.workspace = true
