[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
shared.workspace = true
ui_widgets.workspace = true
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_state",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "bevy_sprite",
    "bevy_log",
    "default_font",
    "png",
    "webgl2",
    "x11",
] }
bevy_egui.workspace = true
strum.workspace = true
uuid.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
ewebsock.workspace = true
serde_json.workspace = true

# Required for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console", "Window", "Location"] }
wasm-bindgen-futures = "0.4"
getrandom.workspace = true
