[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
shared.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
uuid.workspace = true
